[package]
name = "ws_srv"
version = "0.1.0"
authors = ["Agapiy Denis <nastvood@gmail.com>"]
edition = "2018"

[dependencies]
#futures="0.3"
#libc = "0.2"
mio = {version = "0.7", features = ["os-poll", "net"]}
sha-1 = "0.7"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
